--- a/src/style.css
+++ b/src/style.css
@@ -937,5 +937,5 @@ span.strong {
 .status-switch-buttons>button {
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis // This is where the magic happens
+    text-overflow: ellipsis
 }
