--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ body, html {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     min-height: -webkit-fill-available;
-    background-color: var(--ps-background);
+    background-color: white;
 }
 
 table,
@@ -22,29 +22,33 @@ table .dropdown-item {
 
 .nav-link {
     font-weight: 500;
-    color: var(--ps-color-25);
+    color: var(--ps-text-25);
     transition: all .2s ease-out;
     position: relative;
     width: 100%;
     border-radius: .375rem;
+    border: 1px solid transparent
 }
 
 .nav-link.active,
 .nav-link.active:focus,
 .nav-link.active:hover {
-	color: var(--ps-color) !important;
-    background-color: var(--ps-background);
+	color: var(--ps-prim-600) !important;
+    background-color: var(--ps-prim-50);
     position: relative;
+    border-color: var(--ps-prim-50);
 }
 
 .nav-link:focus, 
 .nav-link:hover {
-	color: var(--ps-nav-color-hover);
-    background-color: transparent;
+	color: var(--ps-prim-400);
+    background-color: var(--ps-prim-25);
+    border-color: var(--ps-prim-25);
 }
 
 .nav-link.disabled {
-	color: var(--ps-btn-dark-bg-hover);
+	color: var(--ps-gray-25);
+    opacity: .5;
 	pointer-events: none;
 	cursor: default;
 }
@@ -220,19 +224,47 @@ tr:hover:not(thead>tr) {
 }
 
 :root{
-    --ps-background: hsl(220, 30%, 98%);
-    --ps-navbar-bg: hsl(0, 0%, 100%);
+    --ps-gray-25: hsl(240, 20%, 99%);
+    --ps-gray-50: hsl(210, 20%, 98%);
+    --ps-gray-100: hsl(216, 24%, 96%);
+    --ps-gray-200: hsl(218, 17%, 91%);
+    --ps-gray-300: hsl(217, 16%, 84%);
+    --ps-gray-400: hsl(218, 15%, 65%);
+    --ps-gray-500: hsl(206, 22%, 43%);
+    --ps-gray-600: hsl(216, 18%, 34%);
+    --ps-gray-700: hsl(218, 24%, 27%);
+    --ps-gray-800: hsl(214, 33%, 17%);
+    --ps-gray-900: hsl(220, 43%, 11%);
+    
+    --ps-prim-25: hsl(264, 100%, 99%);
+    --ps-prim-50: hsl(264, 100%, 98%);
+    --ps-prim-100: hsl(267, 100%, 96%);
+    --ps-prim-200: hsl(287, 40%, 89%);
+    --ps-prim-300: hsl(265, 89%, 86%);
+    --ps-prim-400: hsl(262, 85%, 77%);
+    --ps-prim-500: hsl(260, 77%, 70%);
+    --ps-prim-600: hsl(259, 63%, 59%);
+    --ps-prim-700: hsl(258, 54%, 52%);
+    --ps-prim-800: hsl(256, 48%, 42%);
+    --ps-prim-900: hsl(254, 45%, 34%);
+
+    --ps-text: var(--ps-gray-900);
+    --ps-text-50: var(--ps-gray-500);
+    --ps-text-25: var(--ps-gray-300);
+    
+    --ps-border-color: var(--ps-gray-200);
+    --ps-border-color-50: var(--ps-gray-100);
+
+    --ps-background: var(--ps-gray-25);
+    --ps-navbar-bg: white;
     --ps-shadow-hover: hsl(210, 10%, 85%);
     --ps-table-hover-bg: hsl(210, 50%, 97%);
     --ps-table-hover-color: hsl(220, 50%, 50%);
     --ps-table-border-color: hsl(210, 30%, 94%);
-    --ps-border-color: hsl(220, 30%, 94%);
     --ps-border-hover-color: hsl(210, 10%, 70%);
-    --ps-color: hsl(220, 80%, 15%);
-    --ps-color-50: hsl(220, 15%, 60%);
-    --ps-color-25: hsl(220, 25%, 75%);
+    --ps-text-25: hsl(220, 25%, 75%);
     --ps-table-head-bg: hsl(210, 20%, 96%);
-    --ps-table-head-color: var(--ps-color-50);
+    --ps-table-head-color: var(--ps-text-50);
     --ps-table-head-color-hover: hsl(215, 55%, 45%);
     --ps-btn-bg: hsl(220, 20%, 15%);
     /* --ps-btn-bg-nav-hover: hsl(210, 0%, 97%); */
@@ -246,11 +278,12 @@ tr:hover:not(thead>tr) {
     --ps-accent-yellow-bg-50: hsl(44, 100%, 90%);
 }
 .text-mute {
-    color: var(--ps-color-50)
+    color: var(--ps-text-50);
+    font-weight: 500;
 }
 
 .header-row {
-    border-bottom: 1px solid var(--ps-border-color);
+    border-bottom: 1px solid var(--ps-border-color-50);
 }
 
 .border {
@@ -270,9 +303,8 @@ tr:hover:not(thead>tr) {
 	--bs-table-striped-bg: rgba(0, 0, 0, 0.05);
 	--bs-table-active-color: var(--bs-body-color);
 	--bs-table-active-bg: rgba(0, 0, 0, 0.1);
-	--bs-table-hover-color: var(--ps-table-hover-color);
-	--bs-table-hover-bg: var(--ps-table-hover-bg);
-	color: var(--bs-table-color);
+	--bs-table-hover-color: var(--ps-prim-600);
+	--bs-table-hover-bg: var(--ps-prim-25);
 }
 
 .form-control,
@@ -291,17 +323,17 @@ tr:hover:not(thead>tr) {
 }
 
 .main--search-bar {
-    color: var(--ps-color-50);
+    color: var(--ps-text-50);
     border-radius: .375rem;
     transition: all .2s ease;
 }
 
 .search-input--search-icon {
-    color: var(--ps-color-25)
+    color: var(--ps-text-25)
 }
 
 .main--search-bar input::placeholder {
-    color: var(--ps-color-25) ;
+    color: var(--ps-text-25) ;
     transition: all .2s ease;
 }
 
@@ -341,20 +373,19 @@ tr:hover:not(thead>tr) {
 
 .table {
     letter-spacing: -.35px;
-    color: var(--ps-color);
+    color: var(--ps-text-50);
 }
 
 .table--head {
-    /* background-color: ; */
     line-height: 1.8rem;
     border-bottom: 1px solid var(--ps-border-color);
 }
 
 .table--head>th,
 .table--head>th>*>button {
-    background-color: white;
+    background-color: var(--ps-gray-50);
     border: none;
-    color: var(--ps-table-head-color);
+    color: var(--ps-gray-500);
 }
 
 .table--head>th svg {
@@ -390,7 +421,7 @@ tr:hover:not(thead>tr) {
 
 .table--head>th,
 .table--head>th button {
-    font-weight: 600;
+    font-weight: 500;
 }
 
 
@@ -413,13 +444,13 @@ td {
 }
 
 h2 {
-    color: var(--ps-color);
+    color: var(--ps-text);
     font-weight: 600;
     letter-spacing: 1px;
 }
 
 h5 {
-    color: var(--ps-color);
+    color: var(--ps-text);
     font-weight: 600;
     letter-spacing: -.75px;
 }
@@ -491,17 +522,13 @@ span#status-2{
 
 /* modal */
 
-.modal-footer {
-    background-color: var(--ps-table-head-bg);
-}
-
 .modal, 
 .modal textarea {
-    color:var(--ps-color)
+    color:var(--ps-text)
 }
 
 .modal label{
-    color:var(--ps-color-50)
+    color:var(--ps-text-50)
 }
 
 .modal {
@@ -517,7 +544,7 @@ span#status-2{
 }
 
 .button-group button {
-    color: var(--ps-color-25);
+    color: var(--ps-text-25);
     background-color: transparent;
     transition: all .25s ease-out;
     border: none;
@@ -549,9 +576,9 @@ button#status-2.Mui-selected{
 }
 
 
-.btn-ps-accept {
+.btn-ps-prim {
     font-weight: 500;
-    --bs-btn-color: var(--ps-color);
+    --bs-btn-color: var(--ps-text);
     --bs-btn-bg: var(--ps-accent-yellow);
     --bs-btn-border-color: var(--bs-btn-bg);
     --bs-btn-hover-color: black;
@@ -574,13 +601,13 @@ button#status-2.Mui-selected{
 
 }
 
-.btn-ps-new {
+.btn-ps-outline {
     font-weight: 500;
-    --bs-btn-color: var(--ps-color);
-    --bs-btn-bg: white;
-    --bs-btn-border-color: var(--ps-border-color);
-    --bs-btn-hover-color: black;
-    --bs-btn-hover-bg: white;
+    --bs-btn-color: var(--ps-prim-700);
+    --bs-btn-bg: var(--ps-prim-50);
+    --bs-btn-border-color: var(--ps-prim-50);
+    --bs-btn-hover-color: var(--ps-prim-700);
+    --bs-btn-hover-bg: var(--ps-prim-100);
     --bs-btn-hover-border-color: transparent;
     --bs-btn-active-color: #fff;
     --bs-btn-active-bg: #0a58ca;
@@ -593,7 +620,7 @@ button#status-2.Mui-selected{
 
 .btn-ps-dropdown-item {
     font-weight: 500;
-    --bs-btn-color: var(--ps-color);
+    --bs-btn-color: var(--ps-text);
     --bs-btn-bg: transparent;
     --bs-btn-border-color: transparent;
     --bs-btn-hover-color: black;
@@ -793,7 +820,7 @@ span.strong {
 .card {
     --bs-card-border-color: var(--ps-border-color);
     overflow: hidden;
-    color: var(--ps-color);
+    color: var(--ps-text);
     transition: all .2s ease;
 }
 
@@ -823,7 +850,7 @@ span.strong {
     background-color: transparent;
     font-weight: 500;
     font-size: 14px;
-    color: var(--ps-color-50)
+    color: var(--ps-text-50)
 }
 
 .card-image {
@@ -832,14 +859,14 @@ span.strong {
 
 .navbar {
     background-color: var(--ps-navbar-bg);
-    border-right: 1px solid var(--ps-border-color);
+    border-right: 1px solid var(--ps-border-color-50);
     align-items: flex-start;
     max-height: 100vh;
 }
 
 .navbar-indicator {
     background-color: var(--ps-accent-yellow);
-    color: var(--ps-color);
+    color: var(--ps-text);
     font-size: 12px;
     height: 1.5rem;
     min-width: 1.5rem;
@@ -860,7 +887,7 @@ span.strong {
 }
 
 .navbar--offcanvas {
-	--bs-offcanvas-bg: var(--ps-color);
+	--bs-offcanvas-bg: var(--ps-text);
 }
 
 .project-edit-offcanvas .offcanvas-header {
